--- a/css/stylesBooki2.css
+++ b/css/stylesBooki2.css
@@ -14,39 +14,43 @@ body {
 }
 
 h1 {font-weight: bold;
-    font-size: 16px;
+    font-size: 19px;
     margin:0px;
 }
 
 h2 {
     font-weight: bold;
-    font-size: 14px;
+    font-size: 16px;
     margin:0px;
 }
 
 h3 {
     font-weight: bold;
-	font-size: 13px;
+	font-size: 14px;
     margin: 5px 0 ;
 }
 
 p {
-	font-size: 10px;
+	font-size: 12px;
     margin: 0px;
 }
 
+a {
+	text-decoration: none ;
+	color: black;
+    cursor: pointer;
+}
 
 /* Header */
 
 header {
-    height:5.5%;
     display: flex;
     justify-content: space-between;
-    margin: 0 25px;   
+    margin: 0 20px 0 25px;   
 } 
 
 .logo {
-    padding: 23px 5px 0 5px ;}
+    padding: 42px 5px 0 15px ;}
 
 .logo img {
     max-width: 45%;
@@ -57,80 +61,81 @@ header {
 nav>ul {
     display: flex;
     justify-content: space-between;
+    gap: 25px;
 }
 
 ul {
 	list-style: none;
-    padding: 10px 10px;}
+    padding: 32px 0;}
 
 nav>ul>li {
-	font-size: 12px;
-}
-
-a {
-	text-decoration: none ;
-	color: black;
-    cursor: pointer;
+	font-size: 14px;
 }
 
 nav a {
-padding: 22px 10px 0 10px;}
+padding: 45px 15px 0 15px;}
 
 nav a:hover {
 	color:#0065FC;
-    border-top: 4px solid #0065FC;
+    border-top: 2px solid #0065FC;
 }
 	
 
 /* CONTENEUR-INTRODUCTION */
 
 .conteneur-introduction {
-    margin: 25px;
-    height: 17%;
+    display: flex;
+    flex-direction: column;
+    justify-content:flex-start;
+    margin: 0 25px 25px 25px;
+    gap: 25px
 }
 
 .sous-titre {
-        font-size :12px;
+        font-size :14px;
         padding: 10px 0 0 0;
     }
 
 /* Barre de recherche */
 
 .barre-recherche {
-    margin : 25px 0px 25px 3px;
-    width: 30%;
+    margin left: 3px;
+    width: 355px;
     position: relative;
     display: inline-flex;
     align-items: baseline;
-    height:44px;
+    height:50px;
     border: 2px solid #F2F2F2;
-    border-radius: 15px;
+    border-radius: 10px;
 }
 
 .localisation {
-    width: 44px;
-    padding: 10px 15px 25px 15px;
+    width: 50px;
+    padding: 15px 15px 15px 20px;
+    margin: auto;
     position: absolute;
     left:-3px;
-    right: 400px;
+    right: 305px;
     top:0;
     bottom:0;
     background-color: #F2F2F2;
-    border-radius: 15px 0 0 15px;
+    border-radius: 10px 0 0 10px;
 }
 
-.selectionMarseille {
-    width: 100px;
-    position: absolute;
-    left: 47px;
+.localisation>i {
+    width:70%}
 
+.selectionMarseille {
+    width: 140px;
+    position: absolute;
+    left: 53px;
 }
 
 .selectionMarseille input {
-    width: 170px;
-    padding:10px 0px 10px 5px;
+    width: 195px;
+    padding: 15px 0px 15px 5px;
     border: none;
-    font-size: 13px;
+    font-size: 15px;
     color:black;
     font-weight: bold;
     text-align: left;
@@ -138,9 +143,9 @@ nav a:hover {
   }
 
 .bouton {
-    width: 90px;
+    width: 110px;
     position: absolute;
-    left: 210px;
+    left: 245px;
     right: 0;
     top:0;
     bottom:0;
@@ -152,8 +157,7 @@ nav a:hover {
 .bouton-texte {
     background-color:#0065FC;
 	color:white;
-    font-size: 13px;
-    
+    font-size: 15px;
     cursor: pointer;
 } 
 
@@ -163,6 +167,10 @@ nav a:hover {
 
 .Bouton-icone {
     display: none;
+    cursor: pointer;
+    background-color:#0065FC;
+    color:white; 
+    border-radius: 0 10px 10px 0;
 }
 
 
@@ -170,11 +178,13 @@ nav a:hover {
 
 .filtres {
     display: flex;
-    margin-bottom: 25px;
-    flex-wrap: wrap;
     align-items: baseline;
-    gap: 20px;
+    gap: 25px;
 }
+
+.les-box {
+    display: inline-flex;
+    gap: 25px;}
 
 .filtre-box {
     display: flex;
@@ -183,7 +193,7 @@ nav a:hover {
     position: relative;
     border: 2px solid #F2F2F2;
     border-radius: 50px;
-    height: 44px;
+    height: 50px;
 }
 .filtre-icone {
     display: flex;
@@ -191,8 +201,8 @@ nav a:hover {
     left:-2px;
     top: -2px;
     bottom: 0;
-    height: 44px;
-    width: 44px;
+    height: 50px;
+    width: 50px;
     border-radius: 50px;
     background-color: #DEEBFF;
     color:#0065FC;
@@ -202,10 +212,10 @@ nav a:hover {
 }
 
 .filtre-texte {
-    height: 44px;
+    height: 50px;
     font-weight: bold;
-    font-size: 13px;
-    padding: 10px 10px 10px 52px ;
+    font-size: 15px;
+    padding: 10px 10px 10px 62px ;
 }
 
 .filtre-box a:hover {
@@ -215,7 +225,8 @@ nav a:hover {
 /* Point information */
 
 .circle-info {
-    font-size: 12px;
+    font-size: 14px;
+    padding-bottom: 10px;
 }
 .circle-info>i {
     background-color:white;
@@ -233,8 +244,8 @@ nav a:hover {
     height: 39%;
     margin: 0 25px ;
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
+    row-gap: 25px;
 }
 
 .carte-nom-marseille span, .carte-nom-populaires span {
@@ -249,28 +260,29 @@ nav a:hover {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    padding: 12.5px;
+    column-gap: 25px;
+    padding: 25px;
     background-color: #F2F2F2;
     border-radius: 15px;
 }
+
 .bloc-hebergements>h1 {
-    padding-bottom: 12.5px;
-}
-.bloc-hebergements>.articles-hebergements {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    column-gap: 20px;
+    padding-bottom: 25px;
 }
 
+/*.bloc-hebergements>.articles-hebergements {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    column-gap: 25px;
+}*/
+
 .ligne-cartes {
-    height: 224px;
+    height: 175px;
     display: flex;
     justify-content: space-between;
-    row-gap: 20px;
-    padding-bottom: 12.5px;
-}
+    row-gap: 25px;
+    margin-bottom: 25px;}
 
 .carte-hebergements-marseille {
     position: relative;
@@ -288,43 +300,43 @@ nav a:hover {
     left: 0px;
     right: 0px;
     width: 100%;
-    height: 110px;
+    height: 100px;
     object-fit: cover;
     border-radius: 15px 15px 0 0;
 }
 
 .carte-nom-marseille {
-    padding : 10px;
+    padding : 3px 0 3px 5px;
     height: auto;
     width: 100%;
     position: absolute;
     bottom: 0px;
     left: 0px;
     right: 0px;
-    top: 111px;
+    top: 100px;
     border-radius: 0 0 15px 15px;
     background-color: white;
 }
 
 .carte-star-rating {
-        margin-top: 5px;
+    padding-top: 3px;
 }
 
 .carte-star-rating>i {
     color: #0065FC;
-    width: 12px;
-    margin-right: 2px; 
+    width: 5px;
+    margin-right: 4px; 
 }
 
 .carte-star-rating span {
     color:#F2F2F2;
-    width: 12px;
-    margin-right: 2px;
+    width: 5px;
+    margin-right: 4px;
 }
 
-/*.bloc-hebergements>h2 {
-    padding-top: 25px;
-}*/
+.bloc-hebergements h2 {
+    padding-top: 10px;
+}
 
 /* Sous conteneur populaires*/
 
@@ -347,16 +359,15 @@ nav a:hover {
 .titre-populaires>i {
     position: absolute;
     top: 0;
-    right: 5px;
+    right: 0;
 }
 
 .carte-hebergements-populaires {
     position: relative;
-    height: 140px;
+    height: 133px;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: flex-start;
     background-color: white;
     border: 3px solid white;
     border-radius: 15px;
@@ -368,7 +379,7 @@ nav a:hover {
     top:0;
     bottom: 0;
     left: 0;
-    width: 130px;
+    width: 125px;
     height: 100%;
     object-fit: cover;
     border-radius: 15px 0 0 15px;
@@ -381,12 +392,15 @@ nav a:hover {
     top:0;
     bottom: 0;
     left: 131px;
-    padding: 10px;
+    padding: 5px 0 5px 5px;
 }  
 
+.carte-texte-populaires:nth-last-child(1){
+    padding-right: 5px;
+}
 .carte-texte-populaires>.carte-star-rating{
     position: absolute;
-    bottom:10px;   
+    bottom:3px;   
 }
 
 
@@ -424,7 +438,7 @@ nav a:hover {
     display: flex;
     flex-direction: column;
     position:relative;
-    height:350px;
+    height:400px;
     border: 3px solid #F2F2F2;
     border-radius: 15px;
     overflow: hidden;
@@ -432,7 +446,7 @@ nav a:hover {
 .carte-moyenne {
     display: flex;
     position:relative;
-    height: 175px;
+    height: 215px;
     border: 3px solid #F2F2F2;
     border-radius: 15px;
     overflow: hidden;
@@ -441,7 +455,7 @@ nav a:hover {
 .carte-petite {
     display: flex;
     position:relative;
-    height: 150px;
+    height: 160px;
     margin: 0;
     border: 3px solid #F2F2F2;
     border-radius: 15px;
@@ -456,48 +470,61 @@ nav a:hover {
     left: 0;
     right: 0;
 }
-
+    
 .carte-grande>img {
-    height: 300px;
-    width: 100%;
+    height: 350px;
+    width:120%;
+    object-position: 55% 70%;
+    z-index: 0;
 }
 
 .carte-moyenne>img {
-    height: 125px;
+    height: 165px;
     width: 100%;
+    object-position: top
 }
 
-.carte-petite>img {
-    height: 100px;
-    width: 100%;
-    object-position: 35% 25%;
+.carte-moyenne>img:nth-child(1){
+    object-position: 50% 40%;
 }
+.carte-moyenne>img:nth-child(2){
+object-position: top;}
+
+.carte-petite>img {
+    height: 110px;
+    width: 100%;
+    object-position: top;
+    }
+
+
 .articles-activites h3 {
-    padding: 10px;
+    padding: 5px 0 10px 15px;
     position: absolute;
     bottom: 0;
     left:0;
     right:0;
+    margin: 0;
+    z-index: 1;
 }
 
 
 /* footer */
 
 .info-site {
-    height: 11.5%;
     display:flex;
     background-color: #F2F2F2;
-    margin: 25px 0;
-    padding: 12.5px 12.5px 0 12.5px;
-    gap: 200px;
+    padding: 25px 25px 0 25px;
 }
 
 .titrefooter>h2 {
     font-size: 15px;
 }
-
+.titrefooter:nth-child(2) {
+    padding-right: 250px;
+    padding-left: 180px;
+}
 .titrefooter>ul {
-    font-size: 13px;
+    font-size: 14px;
     padding: 0;
 }
 
@@ -507,94 +534,240 @@ nav a:hover {
 /*---VERSION TABLETTE---*/
 
 @media screen and (min-width:768px) and (max-width:991px) {
+body {
+    min-width: 768px;
+    max-width: 991px;
+}
 
+header {
+    flex-direction: column;
+    justify-content: center;
+    padding-bottom: 50px;
+    margin: auto;
+}
 
+.logo {
+    display: flex;
+    padding-left: 85px ;}
+
+.logo img {
+        max-width: 20%;
+        margin: auto;}
+
+nav>ul {
+    display: flex;
+    justify-content: center;
+    gap: 25px;}
+
+ul {
+    padding: 0;}
+
+nav a {
+    padding: 25px 25px;}
+        
+nav a:hover {
+    border-top: none;
+    border-bottom: 2px solid #0065FC;
+        }
+
+nav>ul>li {
+    font-size: 16px;
+        }
+
+.conteneur-introduction {
+    margin: 20px;
+    gap: 20px;
+            } 
+
+h1{
+    font-size: 21px;}
+
+.sous-titre {
+    font-size :16px;}
+
+.barre-recherche{
+        width: 330px;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+    }
+.localisation{
+    right: 285px;
+    }
+    
+.selectionMarseille {
+        width: 100px;
+    }
+    
+.selectionMarseille input {
+    width: 185px;
+    font-size: 15px;
+      }
+    
+.bouton {
+        width: 50px;
+        left: 280px;}
+
+.Bouton-icone {
+    display: flex;
+    justify-content: center;}   
+
+.Bouton-icone>i {
+    width:130%;
+}
+
+.bouton-texte {
+    display: none;
+        } 
+
+    
+.filtres {
+    flex-direction: column;
+    gap: 12.5px;
+} 
+
+.les-box {
+    gap: 12.5px;
+}
+
+#conteneur-hebergements-populaires {
+    height: auto;
+    flex-direction: column-reverse;
+    justify-content: center;
+    column-gap: 25px;
+}
+
+.bloc-hebergements {
+    width: 100%;
+}
+
+.bloc-populaires{
+    margin: auto;
+    width: 70%;
+    justify-content: center;
+}
 }
 
 /* VERSION MOBILE */
 
 @media screen and (max-width:767px) {
 
-body {width: 375px;}
+body {
+    max-width: 767px;
+    min-width: 320px;
+}
 
 header {
-    display: block;
+    flex-direction: column;
     justify-content: center;
-    margin: 0;
-    } 
-    
-    
+    margin: auto;
+}
+
 .logo {
-        justify-content: center;
-        padding: 0;
-    }
+    display: flex;
+    justify-content: center;
+    padding: 25px 25px 15px 70px;}
 
 .logo img {
-        width : auto;
-     }
+        max-width: 35%;
+        margin: auto;}
 
 nav>ul {
-        justify-content: space-between;
-    }
-    
+    display: flex;
+    gap:0
+}
+
+ul {
+    padding: 0;}
+
+nav>ul>li {
+	font-size: 16px;
+}
+
+nav a:nth-child(1) {
+    width: 50%;
+    padding : 20px 50px 20px 50px;}
+
+nav a:nth-child(2){
+    width: 50%;
+    padding : 20px 50px 20px 50px;}
+        
 nav a:hover {
-        border-bottom: 4px solid #0065FC;
-        border-top: 0;
-        color:#0065FC;
-    }
+    border-top: none;
+    border-bottom: 4px solid #0065FC;
+        }
 
-.conteneur-introduction{
-        margin: 0;
-    }
 .conteneur-introduction {
-        white-space: wrap;
+ margin: 20px;
+    gap: 20px;
     }
 
-    #conteneur-hebergements-populaires{
-        height: auto;
-        margin: 0;
-        flex-direction: column;
-        justify-content: center;
-    }
-    #conteneur-hebergements-populaires:nth-child(1){
-        order:2
-    }
-    #conteneur-hebergements-populaires:nth-child(2){
-        order:1
-    }
+h1{
+    font-size: 21px;
+    white-space: wrap;
+}
 
-    .bloc-hebergements>.articles {
-        flex-direction: column;
-        justify-content: center;
-    }
+.sous-titre {
+    font-size :16px;}
 
-    #conteneur-activites{
-        width: 100%;
-        height: auto;
-    }
-    #conteneur-activites>.articles-activites {
-        flex-direction: column;
-        justify-content: center;
-    }
+.barre-recherche{
+    margin: auto;
+    width: 330px;
+    display: flex;
+    justify-content: center;  
+}
+ 
+.localisation{
+    right: 285px;
+}
 
-    footer {
-        flex-direction: column;
-        justify-content: center;
-    }
-  
-.Bouton-icone:hover{}
-  
-.Bouton-icone {
-      background-color: #0065FC;
-      display: block;
-      justify-content: center;
-      cursor: pointer;
-      }
+.selectionMarseille {
+    width: 100px;
+    font-size: 16px;
+}
+
+.selectionMarseille input {
+    width: 185px;
+    font-size: 16px;
+  }
+
+.bouton {
+    width: 50px;
+    left: 280px;}
+
 .bouton-texte {
     display: none;
-  }
+        } 
 
-  .Bouton-icone .i {
-      color: white;
-      }
-  }
+.Bouton-icone {
+    display: flex;
+    justify-content: center;
+}   
+
+.Bouton-icone i {
+    width:130%;
+}
+
+h2 {font-size: 17px;}
+
+.filtres {
+    flex-direction: column;
+    gap: 12.5px;
+} 
+.les-box {
+    flex-wrap: wrap;
+    gap: 12.5px;
+}
+.filtre-texte {
+    font-size: 16px;
+}
+
+#conteneur-hebergements-populaires {
+    width : 100%;
+    height: auto;
+    flex-direction: column-reverse;
+    justify-content: center;
+    column-gap: 25px;
+}
+
+}
